tests/llm/fixtures/test_ask_holmes/25_misconfigured_ingress_class/kubectl_describe.txt
{"toolset_name":"kubernetes/core","tool_name":"kubectl_describe","match_params":{"kind":"ingress","name":"my-http-ingress","namespace":"default"}}
stdout:
Name:             my-http-ingress
Labels:           <none>
Namespace:        default
Address:
Ingress Class:    example-ingress-class
Default backend:  <default>
Rules:
  Host             Path  Backends
  ----             ----  --------
  app.example.com
                   /   my-http-service:80 (10.244.0.194:8080)
Annotations:       <none>
Events:            <none>

stderr:
        10.244.0.194
IPs:
  IP:           10.244.0.194
Controlled By:  ReplicaSet/my-http-app-deployment-75cdcff8b4
Containers:
  my-http-app:
    Container ID:   containerd://e1626357405b33029829b10f0029da04c23dbc17905be7268e90105c9df98e82
    Image:          nginx
    Image ID:       docker.io/library/nginx@sha256:bc5eac5eafc581aeda3008b4b1f07ebba230de2f27d47767129a6a905c84f470
    Port:           8080/TCP
    Host Port:      0/TCP
    State:          Running
      Started:      Tue, 26 Nov 2024 12:37:45 +0100
    Ready:          True
    Restart Count:  0
    Environment:    <none>
    Mounts:
      /var/run/secrets/kubernetes.io/serviceaccount from kube-api-access-68j26 (ro)
Conditions:
  Type                        Status
  PodReadyToStartContainers   True
  Initialized                 True
  Ready                       True
  ContainersReady             True
  PodScheduled                True
Volumes:
  kube-api-access-68j26:
    Type:                    Projected (a volume that contains injected data from multiple sources)
    TokenExpirationSeconds:  3607
    ConfigMapName:           kube-root-ca.crt
    ConfigMapOptional:       <nil>
    DownwardAPI:             true
QoS Class:                   BestEffort
Node-Selectors:              <none>
Tolerations:                 node.kubernetes.io/not-ready:NoExecute op=Exists for 300s
                             node.kubernetes.io/unreachable:NoExecute op=Exists for 300s
Events:
  Type    Reason     Age   From               Message
  ----    ------     ----  ----               -------
  Normal  Scheduled  13s   default-scheduler  Successfully assigned default/my-http-app-deployment-75cdcff8b4-5kzjx to kind-control-plane
  Normal  Pulling    13s   kubelet            Pulling image "nginx"
  Normal  Pulled     12s   kubelet            Successfully pulled image "nginx" in 849ms (849ms including waiting). Image size: 72955450 bytes.
  Normal  Created    12s   kubelet            Created container my-http-app
  Normal  Started    12s   kubelet            Started container my-http-app

stderr:
