tests/llm/fixtures/test_ask_holmes/25_misconfigured_ingress_class/kubectl_get.txt
{"toolset_name":"kubernetes/core","tool_name":"kubectl_get","match_params":{"kind":"service","name":"my-http-app","namespace":"default"}}
Command `kubectl get --show-labels -o wide service my-http-app -n default` failed with return code 1
stdout:

stderr:
Error from server (NotFound): services "my-http-app" not found
