tests/llm/fixtures/test_ask_holmes/25_misconfigured_ingress_class/kubectl_get_all.txt
{"toolset_name":"kubernetes/core","tool_name":"kubectl_get_by_kind_in_cluster","match_params":{"kind":"service"}}
stdout:
NAMESPACE     NAME                                                 TYPE        CLUSTER-IP      EXTERNAL-IP   PORT(S)                        AGE     SELECTOR                                                                                              LABELS
default       alertmanager-operated                                ClusterIP   None            <none>        9093/TCP,9094/TCP,9094/UDP     7d3h    app.kubernetes.io/name=alertmanager                                                                   operated-alertmanager=true
default       flask-service                                        ClusterIP   10.96.93.203    <none>        80/TCP                         115s    app=flask                                                                                             app=flask
default       kubernetes                                           ClusterIP   10.96.0.1       <none>        443/TCP                        8d      <none>                                                                                                component=apiserver,provider=kubernetes
default       my-http-service                                      ClusterIP   10.96.26.163    <none>        80/TCP                         10s     app=my-http-app                                                                                       <none>
default       prometheus-operated                                  ClusterIP   None            <none>        9090/TCP                       7d3h    app.kubernetes.io/name=prometheus                                                                     operated-prometheus=true
default       robusta-forwarder                                    ClusterIP   10.96.177.133   <none>        80/TCP                         7d3h    app=robusta-forwarder                                                                                 app.kubernetes.io/managed-by=Helm,app=robusta-forwarder
default       robusta-grafana                                      ClusterIP   10.96.51.144    <none>        80/TCP                         7d3h    app.kubernetes.io/instance=robusta,app.kubernetes.io/name=grafana                                     app.kubernetes.io/instance=robusta,app.kubernetes.io/managed-by=Helm,app.kubernetes.io/name=grafana,app.kubernetes.io/version=10.2.2,helm.sh/chart=grafana-7.0.19
default       robusta-holmes                                       ClusterIP   10.96.178.157   <none>        80/TCP                         7d3h    app=holmes                                                                                            app.kubernetes.io/managed-by=Helm,app=holmes
default       robusta-kube-prometheus-st-alertmanager              ClusterIP   10.96.111.120   <none>        9093/TCP,8080/TCP              7d3h    alertmanager=robusta-kube-prometheus-st-alertmanager,app.kubernetes.io/name=alertmanager              app.kubernetes.io/instance=robusta,app.kubernetes.io/managed-by=Helm,app.kubernetes.io/part-of=kube-prometheus-stack,app.kubernetes.io/version=55.7.0,app=kube-prometheus-stack-alertmanager,chart=kube-prometheus-stack-55.7.0,heritage=Helm,release=robu [...]
default       robusta-kube-prometheus-st-operator                  ClusterIP   10.96.124.245   <none>        443/TCP                        7d3h    app=kube-prometheus-stack-operator,release=robusta                                                    app.kubernetes.io/instance=robusta,app.kubernetes.io/managed-by=Helm,app.kubernetes.io/part-of=kube-prometheus-stack,app.kubernetes.io/version=55.7.0,app=kube-prometheus-stack-operator,chart=kube-prometheus-stack-55.7.0,heritage=Helm,release=robusta
default       robusta-kube-prometheus-st-prometheus                ClusterIP   10.96.111.58    <none>        9090/TCP,8080/TCP              7d3h    app.kubernetes.io/name=prometheus,operator.prometheus.io/name=robusta-kube-prometheus-st-prometheus   app.kubernetes.io/instance=robusta,app.kubernetes.io/managed-by=Helm,app.kubernetes.io/part-of=kube-prometheus-stack,app.kubernetes.io/version=55.7.0,app=kube-prometheus-stack-prometheus,chart=kube-prometheus-stack-55.7.0,heritage=Helm,release=robust [...]
default       robusta-kube-state-metrics                           ClusterIP   10.96.3.18      <none>        8080/TCP                       7d3h    app.kubernetes.io/instance=robusta,app.kubernetes.io/name=kube-state-metrics                          app.kubernetes.io/component=metrics,app.kubernetes.io/instance=robusta,app.kubernetes.io/managed-by=Helm,app.kubernetes.io/name=kube-state-metrics,app.kubernetes.io/part-of=kube-state-metrics,app.kubernetes.io/version=2.10.1,helm.sh/chart=kube-state- [...]
default       robusta-prometheus-node-exporter                     ClusterIP   10.96.48.97     <none>        9104/TCP                       7d3h    app.kubernetes.io/instance=robusta,app.kubernetes.io/name=prometheus-node-exporter                    app.kubernetes.io/component=metrics,app.kubernetes.io/instance=robusta,app.kubernetes.io/managed-by=Helm,app.kubernetes.io/name=prometheus-node-exporter,app.kubernetes.io/part-of=prometheus-node-exporter,app.kubernetes.io/version=1.7.0,helm.sh/chart= [...]
default       robusta-runner                                       ClusterIP   10.96.60.91     <none>        80/TCP                         7d3h    app=robusta-runner                                                                                    app.kubernetes.io/managed-by=Helm,app=robusta-runner,target=robusta-runner
kube-system   kube-dns                                             ClusterIP   10.96.0.10      <none>        53/UDP,53/TCP,9153/TCP         8d      k8s-app=kube-dns                                                                                      k8s-app=kube-dns,kubernetes.io/cluster-service=true,kubernetes.io/name=CoreDNS
kube-system   robusta-kube-prometheus-st-coredns                   ClusterIP   None            <none>        9153/TCP                       7d3h    k8s-app=kube-dns                                                                                      app.kubernetes.io/instance=robusta,app.kubernetes.io/managed-by=Helm,app.kubernetes.io/part-of=kube-prometheus-stack,app.kubernetes.io/version=55.7.0,app=kube-prometheus-stack-coredns,chart=kube-prometheus-stack-55.7.0,heritage=Helm,jobLabel=coredns, [...]
kube-system   robusta-kube-prometheus-st-kube-controller-manager   ClusterIP   None            <none>        10257/TCP                      7d3h    component=kube-controller-manager                                                                     app.kubernetes.io/instance=robusta,app.kubernetes.io/managed-by=Helm,app.kubernetes.io/part-of=kube-prometheus-stack,app.kubernetes.io/version=55.7.0,app=kube-prometheus-stack-kube-controller-manager,chart=kube-prometheus-stack-55.7.0,heritage=Helm,j [...]
kube-system   robusta-kube-prometheus-st-kube-etcd                 ClusterIP   None            <none>        2381/TCP                       7d3h    component=etcd                                                                                        app.kubernetes.io/instance=robusta,app.kubernetes.io/managed-by=Helm,app.kubernetes.io/part-of=kube-prometheus-stack,app.kubernetes.io/version=55.7.0,app=kube-prometheus-stack-kube-etcd,chart=kube-prometheus-stack-55.7.0,heritage=Helm,jobLabel=kube-e [...]
kube-system   robusta-kube-prometheus-st-kube-scheduler            ClusterIP   None            <none>        10259/TCP                      7d3h    component=kube-scheduler                                                                              app.kubernetes.io/instance=robusta,app.kubernetes.io/managed-by=Helm,app.kubernetes.io/part-of=kube-prometheus-stack,app.kubernetes.io/version=55.7.0,app=kube-prometheus-stack-kube-scheduler,chart=kube-prometheus-stack-55.7.0,heritage=Helm,jobLabel=k [...]
kube-system   robusta-kube-prometheus-st-kubelet                   ClusterIP   None            <none>        10250/TCP,10255/TCP,4194/TCP   7d3h    <none>                                                                                                app.kubernetes.io/managed-by=prometheus-operator,app.kubernetes.io/name=kubelet,k8s-app=kubelet
sock-shop     carts                                                ClusterIP   10.96.133.54    <none>        80/TCP                         2m50s   name=carts                                                                                            name=carts
sock-shop     carts-db                                             ClusterIP   10.96.227.101   <none>        27017/TCP                      2m50s   name=carts-db                                                                                         name=carts-db
sock-shop     catalogue                                            ClusterIP   10.96.182.29    <none>        80/TCP                         2m50s   name=catalogue                                                                                        name=catalogue
sock-shop     catalogue-db                                         ClusterIP   10.96.99.184    <none>        3306/TCP                       2m49s   name=catalogue-db                                                                                     name=catalogue-db
sock-shop     front-end                                            NodePort    10.96.207.177   <none>        80:30001/TCP                   2m49s   name=front-end                                                                                        name=front-end
sock-shop     orders                                               ClusterIP   10.96.145.200   <none>        80/TCP                         2m49s   name=orders                                                                                           name=orders
sock-shop     orders-db                                            ClusterIP   10.96.42.48     <none>        27017/TCP                      2m49s   name=orders-db                                                                                        name=orders-db
sock-shop     payment                                              ClusterIP   10.96.38.155    <none>        80/TCP                         2m49s   name=payment                                                                                          name=payment
sock-shop     queue-master                                         ClusterIP   10.96.246.109   <none>        80/TCP                         2m49s   name=queue-master                                                                                     name=queue-master
sock-shop     rabbitmq                                             ClusterIP   10.96.118.103   <none>        5672/TCP,9090/TCP              2m49s   name=rabbitmq                                                                                         name=rabbitmq
sock-shop     session-db                                           ClusterIP   10.96.53.34     <none>        6379/TCP                       2m49s   name=session-db                                                                                       name=session-db
sock-shop     shipping                                             ClusterIP   10.96.207.189   <none>        80/TCP                         2m49s   name=shipping                                                                                         name=shipping
sock-shop     user                                                 ClusterIP   10.96.204.42    <none>        80/TCP                         2m49s   name=user                                                                                             name=user
sock-shop     user-db                                              ClusterIP   10.96.15.137    <none>        27017/TCP                      2m49s   name=user-db                                                                                          name=user-db

stderr:
