tests/llm/fixtures/test_ask_holmes/25_misconfigured_ingress_class/kubectl_get_by_kind_in_cluster_deployment.txt
{"toolset_name":"kubernetes/core","tool_name":"kubectl_get_by_kind_in_cluster","match_params":{"kind":"deployment"}}
{"schema_version": "robusta:v1.0.0", "status": "success", "error": null, "return_code": 0, "data": null, "url": null, "invocation": "kubectl get -A --show-labels -o wide deployment", "params": {"kind": "deployment"}}
NAMESPACE            NAME                                  READY   UP-TO-DATE   AVAILABLE   AGE     CONTAINERS                                            IMAGES                                                                                                     SELECTOR                                                                                                       LABELS
default              curl-deployment                       1/1     1            1           28h     curl-container                                        curlimages/curl:7.78.0                                                                                     app=curl-app                                                                                                   <none>
default              meme-deployment                       2/2     2            2           28h     meme-app                                              pavangudiwada/meme-generator:latest                                                                        app=meme-app                                                                                                   app=meme-app
default              my-http-app-deployment                1/1     1            1           8m50s   my-http-app                                           nginx                                                                                                      app=my-http-app                                                                                                <none>
default              robusta-forwarder                     1/1     1            1           29d     kubewatch                                             robustadev/kubewatch:v2.9.0                                                                                app=robusta-forwarder                                                                                          app.kubernetes.io/managed-by=Helm,robusta=forwarder
default              robusta-grafana                       1/1     1            1           29d     grafana-sc-dashboard,grafana-sc-datasources,grafana   quay.io/kiwigrid/k8s-sidecar:1.25.2,quay.io/kiwigrid/k8s-sidecar:1.25.2,docker.io/grafana/grafana:10.2.2   app.kubernetes.io/instance=robusta,app.kubernetes.io/name=grafana                                              app.kubernetes.io/instance=robusta,app.kubernetes.io/managed-by=Helm,app.kubernetes.io/name=grafana,app.kubernetes.io/version=10 [...]
default              robusta-holmes                        1/1     1            1           29d     holmes                                                us-central1-docker.pkg.dev/genuine-flight-317411/devel/holmes:nicolas_test                                 app=holmes                                                                                                     app.kubernetes.io/managed-by=Helm,app=holmes
default              robusta-kube-prometheus-st-operator   1/1     1            1           29d     kube-prometheus-stack                                 quay.io/prometheus-operator/prometheus-operator:v0.70.0                                                    app=kube-prometheus-stack-operator,release=robusta                                                             app.kubernetes.io/instance=robusta,app.kubernetes.io/managed-by=Helm,app.kubernetes.io/part-of=kube-prometheus-stack,app.kuberne [...]
default              robusta-kube-state-metrics            1/1     1            1           29d     kube-state-metrics                                    registry.k8s.io/kube-state-metrics/kube-state-metrics:v2.10.1                                              app.kubernetes.io/instance=robusta,app.kubernetes.io/name=kube-state-metrics                                   app.kubernetes.io/component=metrics,app.kubernetes.io/instance=robusta,app.kubernetes.io/managed-by=Helm,app.kubernetes.io/name= [...]
default              robusta-runner                        1/1     1            1           29d     runner                                                us-central1-docker.pkg.dev/genuine-flight-317411/devel/robusta-runner:nicolas_test                         app=robusta-runner                                                                                             app.kubernetes.io/managed-by=Helm,app=robusta-runner,robusta=runner
default              user-profile-resources                0/1     1            0           4h4m    profile-getter                                        nginx                                                                                                      app=user-profile-resources                                                                                     <none>
kube-system          coredns                               2/2     2            2           29d     coredns                                               registry.k8s.io/coredns/coredns:v1.11.3                                                                    k8s-app=kube-dns                                                                                               k8s-app=kube-dns
local-path-storage   local-path-provisioner                1/1     1            1           29d     local-path-provisioner                                docker.io/kindest/local-path-provisioner:v20240813-c6f155d6                                                app=local-path-provisioner                                                                                     <none>
mimir-test           mimir-distributor                     1/1     1            1           9d      distributor                                           grafana/mimir:2.16.0                                                                                       app.kubernetes.io/component=distributor,app.kubernetes.io/instance=mimir,app.kubernetes.io/name=mimir          app.kubernetes.io/component=distributor,app.kubernetes.io/instance=mimir,app.kubernetes.io/managed-by=Helm,app.kubernetes.io/nam [...]
mimir-test           mimir-minio                           1/1     1            1           9d      minio                                                 quay.io/minio/minio:RELEASE.2024-12-18T13-15-44Z                                                           app=minio,release=mimir                                                                                        app.kubernetes.io/managed-by=Helm,app=minio,chart=minio-5.4.0,heritage=Helm,release=mimir
mimir-test           mimir-nginx                           1/1     1            1           9d      nginx                                                 docker.io/nginxinc/nginx-unprivileged:1.27-alpine                                                          app.kubernetes.io/component=nginx,app.kubernetes.io/instance=mimir,app.kubernetes.io/name=mimir                app.kubernetes.io/component=nginx,app.kubernetes.io/instance=mimir,app.kubernetes.io/managed-by=Helm,app.kubernetes.io/name=mimi [...]
mimir-test           mimir-overrides-exporter              1/1     1            1           9d      overrides-exporter                                    grafana/mimir:2.16.0                                                                                       app.kubernetes.io/component=overrides-exporter,app.kubernetes.io/instance=mimir,app.kubernetes.io/name=mimir   app.kubernetes.io/component=overrides-exporter,app.kubernetes.io/instance=mimir,app.kubernetes.io/managed-by=Helm,app.kubernetes [...]
mimir-test           mimir-querier                         2/2     2            2           9d      querier                                               grafana/mimir:2.16.0                                                                                       app.kubernetes.io/component=querier,app.kubernetes.io/instance=mimir,app.kubernetes.io/name=mimir              app.kubernetes.io/component=querier,app.kubernetes.io/instance=mimir,app.kubernetes.io/managed-by=Helm,app.kubernetes.io/name=mi [...]
mimir-test           mimir-query-frontend                  1/1     1            1           9d      query-frontend                                        grafana/mimir:2.16.0                                                                                       app.kubernetes.io/component=query-frontend,app.kubernetes.io/instance=mimir,app.kubernetes.io/name=mimir       app.kubernetes.io/component=query-frontend,app.kubernetes.io/instance=mimir,app.kubernetes.io/managed-by=Helm,app.kubernetes.io/ [...]
mimir-test           mimir-query-scheduler                 2/2     2            2           9d      query-scheduler                                       grafana/mimir:2.16.0                                                                                       app.kubernetes.io/component=query-scheduler,app.kubernetes.io/instance=mimir,app.kubernetes.io/name=mimir      app.kubernetes.io/component=query-scheduler,app.kubernetes.io/instance=mimir,app.kubernetes.io/managed-by=Helm,app.kubernetes.io [...]
mimir-test           mimir-rollout-operator                1/1     1            1           9d      rollout-operator                                      grafana/rollout-operator:v0.24.0                                                                           app.kubernetes.io/instance=mimir,app.kubernetes.io/name=rollout-operator                                       app.kubernetes.io/instance=mimir,app.kubernetes.io/managed-by=Helm,app.kubernetes.io/name=rollout-operator,app.kubernetes.io/ver [...]
mimir-test           mimir-ruler                           1/1     1            1           9d      ruler                                                 grafana/mimir:2.16.0                                                                                       app.kubernetes.io/component=ruler,app.kubernetes.io/instance=mimir,app.kubernetes.io/name=mimir                app.kubernetes.io/component=ruler,app.kubernetes.io/instance=mimir,app.kubernetes.io/managed-by=Helm,app.kubernetes.io/name=mimi [...]
sock-shop            carts                                 1/1     1            1           20d     carts                                                 weaveworksdemos/carts:0.4.8                                                                                name=carts                                                                                                     name=carts
sock-shop            carts-db                              1/1     1            1           20d     carts-db                                              mongo                                                                                                      name=carts-db                                                                                                  name=carts-db
sock-shop            catalogue                             1/1     1            1           20d     catalogue                                             weaveworksdemos/catalogue:0.3.5                                                                            name=catalogue                                                                                                 name=catalogue
sock-shop            catalogue-db                          1/1     1            1           20d     catalogue-db                                          weaveworksdemos/catalogue-db:0.3.0                                                                         name=catalogue-db                                                                                              name=catalogue-db
sock-shop            front-end                             1/1     1            1           20d     front-end                                             weaveworksdemos/front-end:0.3.12                                                                           name=front-end                                                                                                 <none>
sock-shop            orders                                1/1     1            1           20d     orders                                                weaveworksdemos/orders:0.4.7                                                                               name=orders                                                                                                    name=orders
sock-shop            orders-db                             1/1     1            1           20d     orders-db                                             mongo                                                                                                      name=orders-db                                                                                                 name=orders-db
sock-shop            payment                               1/1     1            1           20d     payment                                               weaveworksdemos/payment:0.4.3                                                                              name=payment                                                                                                   name=payment
sock-shop            queue-master                          1/1     1            1           20d     queue-master                                          weaveworksdemos/queue-master:0.3.1                                                                         name=queue-master                                                                                              name=queue-master
sock-shop            rabbitmq                              1/1     1            1           20d     rabbitmq,rabbitmq-exporter                            rabbitmq:3.6.8-management,kbudde/rabbitmq-exporter                                                         name=rabbitmq                                                                                                  name=rabbitmq
sock-shop            session-db                            1/1     1            1           20d     session-db                                            redis:alpine                                                                                               name=session-db                                                                                                name=session-db
sock-shop            shipping                              1/1     1            1           20d     shipping                                              weaveworksdemos/shipping:0.4.8                                                                             name=shipping                                                                                                  name=shipping
sock-shop            user                                  1/1     1            1           20d     user                                                  weaveworksdemos/user:0.4.7                                                                                 name=user                                                                                                      name=user
sock-shop            user-db                               1/1     1            1           20d     user-db                                               weaveworksdemos/user-db:0.3.0                                                                              name=user-db                                                                                                   name=user-db
