tests/llm/fixtures/test_ask_holmes/25_misconfigured_ingress_class/kubectl_get_by_kind_in_namespace_deployment.txt
{"toolset_name":"kubernetes/core","tool_name":"kubectl_get_by_kind_in_namespace","match_params":{"kind":"deployment","namespace":"default"}}
{"schema_version": "robusta:v1.0.0", "status": "success", "error": null, "return_code": 0, "data": null, "url": null, "invocation": "kubectl get --show-labels -o wide deployment -n default", "params": {"kind": "deployment", "namespace": "default"}}
NAME                                  READY   UP-TO-DATE   AVAILABLE   AGE    CONTAINERS                                            IMAGES                                                                                                     SELECTOR                                                                       LABELS
curl-deployment                       1/1     1            1           28h    curl-container                                        curlimages/curl:7.78.0                                                                                     app=curl-app                                                                   <none>
meme-deployment                       2/2     2            2           28h    meme-app                                              pavangudiwada/meme-generator:latest                                                                        app=meme-app                                                                   app=meme-app
my-http-app-deployment                1/1     1            1           12m    my-http-app                                           nginx                                                                                                      app=my-http-app                                                                <none>
robusta-forwarder                     1/1     1            1           29d    kubewatch                                             robustadev/kubewatch:v2.9.0                                                                                app=robusta-forwarder                                                          app.kubernetes.io/managed-by=Helm,robusta=forwarder
robusta-grafana                       1/1     1            1           29d    grafana-sc-dashboard,grafana-sc-datasources,grafana   quay.io/kiwigrid/k8s-sidecar:1.25.2,quay.io/kiwigrid/k8s-sidecar:1.25.2,docker.io/grafana/grafana:10.2.2   app.kubernetes.io/instance=robusta,app.kubernetes.io/name=grafana              app.kubernetes.io/instance=robusta,app.kubernetes.io/managed-by=Helm,app.kubernetes.io/name=grafana,app.kubernetes.io/version=10.2.2,helm.sh/chart=grafana-7.0.19
robusta-holmes                        1/1     1            1           29d    holmes                                                us-central1-docker.pkg.dev/genuine-flight-317411/devel/holmes:nicolas_test                                 app=holmes                                                                     app.kubernetes.io/managed-by=Helm,app=holmes
robusta-kube-prometheus-st-operator   1/1     1            1           29d    kube-prometheus-stack                                 quay.io/prometheus-operator/prometheus-operator:v0.70.0                                                    app=kube-prometheus-stack-operator,release=robusta                             app.kubernetes.io/instance=robusta,app.kubernetes.io/managed-by=Helm,app.kubernetes.io/part-of=kube-prometheus-stack,app.kubernetes.io/version=55.7.0,app=kube-prometheus-stack-operat [...]
robusta-kube-state-metrics            1/1     1            1           29d    kube-state-metrics                                    registry.k8s.io/kube-state-metrics/kube-state-metrics:v2.10.1                                              app.kubernetes.io/instance=robusta,app.kubernetes.io/name=kube-state-metrics   app.kubernetes.io/component=metrics,app.kubernetes.io/instance=robusta,app.kubernetes.io/managed-by=Helm,app.kubernetes.io/name=kube-state-metrics,app.kubernetes.io/part-of=kube-stat [...]
robusta-runner                        1/1     1            1           29d    runner                                                us-central1-docker.pkg.dev/genuine-flight-317411/devel/robusta-runner:nicolas_test                         app=robusta-runner                                                             app.kubernetes.io/managed-by=Helm,app=robusta-runner,robusta=runner
user-profile-resources                0/1     1            0           4h8m   profile-getter                                        nginx                                                                                                      app=user-profile-resources                                                     <none>
