tests/llm/fixtures/test_ask_holmes/25_misconfigured_ingress_class/kubectl_get_by_kind_in_namespace_service.txt
{"toolset_name":"kubernetes/core","tool_name":"kubectl_get_by_kind_in_namespace","match_params":{"kind":"service","namespace":"default"}}
{"schema_version": "robusta:v1.0.0", "status": "success", "error": null, "return_code": 0, "data": null, "url": null, "invocation": "kubectl get --show-labels -o wide service -n default", "params": {"kind": "service", "namespace": "default"}}
NAME                                      TYPE        CLUSTER-IP     EXTERNAL-IP   PORT(S)                      AGE     SELECTOR                                                                                              LABELS
alertmanager-operated                     ClusterIP   None           <none>        9093/TCP,9094/TCP,9094/UDP   29d     app.kubernetes.io/name=alertmanager                                                                   operated-alertmanager=true
kubernetes                                ClusterIP   10.96.0.1      <none>        443/TCP                      29d     <none>                                                                                                component=apiserver,provider=kubernetes
meme-service                              ClusterIP   10.96.38.41    <none>        5000/TCP                     28h     app=meme-app                                                                                          <none>
my-http-service                           ClusterIP   10.96.26.69    <none>        80/TCP                       8m13s   app=my-http-app                                                                                       <none>
prometheus-operated                       ClusterIP   None           <none>        9090/TCP                     29d     app.kubernetes.io/name=prometheus                                                                     operated-prometheus=true
robusta-forwarder                         ClusterIP   10.96.98.88    <none>        80/TCP                       29d     app=robusta-forwarder                                                                                 app.kubernetes.io/managed-by=Helm,app=robusta-forwarder
robusta-grafana                           ClusterIP   10.96.58.104   <none>        80/TCP                       29d     app.kubernetes.io/instance=robusta,app.kubernetes.io/name=grafana                                     app.kubernetes.io/instance=robusta,app.kubernetes.io/managed-by=Helm,app.kubernetes.io/name=grafana,app.kubernetes.io/version=10.2.2,helm.sh/chart=grafana-7.0.19
robusta-holmes                            ClusterIP   10.96.203.89   <none>        80/TCP                       29d     app=holmes                                                                                            app.kubernetes.io/managed-by=Helm,app=holmes
robusta-kube-prometheus-st-alertmanager   ClusterIP   10.96.95.70    <none>        9093/TCP,8080/TCP            29d     alertmanager=robusta-kube-prometheus-st-alertmanager,app.kubernetes.io/name=alertmanager              app.kubernetes.io/instance=robusta,app.kubernetes.io/managed-by=Helm,app.kubernetes.io/part-of=kube-prometheus-stack,app.kubernetes.io/version=55.7.0,app=kube-prometheus-stack-alertmanager,chart=kube-prometheus-stack-55.7.0,heritage=Helm,release=robusta,self-monitor=true
robusta-kube-prometheus-st-operator       ClusterIP   10.96.146.15   <none>        443/TCP                      29d     app=kube-prometheus-stack-operator,release=robusta                                                    app.kubernetes.io/instance=robusta,app.kubernetes.io/managed-by=Helm,app.kubernetes.io/part-of=kube-prometheus-stack,app.kubernetes.io/version=55.7.0,app=kube-prometheus-stack-operator,chart=kube-prometheus-stack-55.7.0,heritage=Helm,release=robusta
robusta-kube-prometheus-st-prometheus     ClusterIP   10.96.251.75   <none>        9090/TCP,8080/TCP            29d     app.kubernetes.io/name=prometheus,operator.prometheus.io/name=robusta-kube-prometheus-st-prometheus   app.kubernetes.io/instance=robusta,app.kubernetes.io/managed-by=Helm,app.kubernetes.io/part-of=kube-prometheus-stack,app.kubernetes.io/version=55.7.0,app=kube-prometheus-stack-prometheus,chart=kube-prometheus-stack-55.7.0,heritage=Helm,release=robusta,self-monitor=true
robusta-kube-state-metrics                ClusterIP   10.96.7.32     <none>        8080/TCP                     29d     app.kubernetes.io/instance=robusta,app.kubernetes.io/name=kube-state-metrics                          app.kubernetes.io/component=metrics,app.kubernetes.io/instance=robusta,app.kubernetes.io/managed-by=Helm,app.kubernetes.io/name=kube-state-metrics,app.kubernetes.io/part-of=kube-state-metrics,app.kubernetes.io/version=2.10.1,helm.sh/chart=kube-state-metrics-5.15.3,release=robus [...]
robusta-prometheus-node-exporter          ClusterIP   10.96.33.225   <none>        9104/TCP                     29d     app.kubernetes.io/instance=robusta,app.kubernetes.io/name=prometheus-node-exporter                    app.kubernetes.io/component=metrics,app.kubernetes.io/instance=robusta,app.kubernetes.io/managed-by=Helm,app.kubernetes.io/name=prometheus-node-exporter,app.kubernetes.io/part-of=prometheus-node-exporter,app.kubernetes.io/version=1.7.0,helm.sh/chart=prometheus-node-exporter-4.2 [...]
robusta-runner                            ClusterIP   10.96.30.205   <none>        80/TCP                       29d     app=robusta-runner                                                                                    app.kubernetes.io/managed-by=Helm,app=robusta-runner,target=robusta-runner
