tests/llm/fixtures/test_ask_holmes/25_misconfigured_ingress_class/kubectl_lineage_children.txt
{"toolset_name":"kubernetes/extras","tool_name":"kubectl_lineage_children","match_params":{"kind":"deployment","name":"my-http-app-deployment","namespace":"default"}}
stdout:
NAME                                                                         READY   STATUS                                                                                                      AGE
Deployment/my-http-app-deployment                                            1/1                                                                                                                 8s
├── Event/my-http-app-deployment.180b81ad9f8eb0fd                            -       ScalingReplicaSet: Scaled up replica set my-http-app-deployment-75cdcff8b4 to 1                             8s
└── ReplicaSet/my-http-app-deployment-75cdcff8b4                             1/1                                                                                                                 8s
    ├── Event/my-http-app-deployment-75cdcff8b4.180b81ada0626ef0             -       SuccessfulCreate: Created pod: my-http-app-deployment-75cdcff8b4-5kzjx                                      8s
    └── Pod/my-http-app-deployment-75cdcff8b4-5kzjx                          1/1     Running                                                                                                     8s
        ├── Event/my-http-app-deployment-75cdcff8b4-5kzjx.180b81ada0ca6a09   -       Scheduled: Successfully assigned default/my-http-app-deployment-75cdcff8b4-5kzjx to kind-control-plane      8s
        ├── Event/my-http-app-deployment-75cdcff8b4-5kzjx.180b81adba88e648   -       Pulling: Pulling image "nginx"                                                                              8s
        ├── Event/my-http-app-deployment-75cdcff8b4-5kzjx.180b81aded25de1e   -       Pulled: Successfully pulled image "nginx" in 849ms (849ms including waiting). Image size: 72955450 bytes.   7s
        ├── Event/my-http-app-deployment-75cdcff8b4-5kzjx.180b81adef617c63   -       Created: Created container my-http-app                                                                      7s
        ├── Event/my-http-app-deployment-75cdcff8b4-5kzjx.180b81adf45f290c   -       Started: Started container my-http-app                                                                      7s
        ├── Service/kubernetes                                               -                                                                                                                   8d
        └── Service/my-http-service                                          -                                                                                                                   8s
            ├── EndpointSlice/my-http-service-ts4rh                          -                                                                                                                   8s
            └── Ingress/my-http-ingress                                      -                                                                                                                   8s

stderr:
