tests/llm/fixtures/test_ask_holmes/25_misconfigured_ingress_class/kubectl_logs.txt
{"toolset_name":"kubernetes/core","tool_name":"kubectl_logs","match_params":{"name":"my-http-app-deployment-75cdcff8b4-5kzjx","namespace":"default"}}
stdout:
/docker-entrypoint.sh: /docker-entrypoint.d/ is not empty, will attempt to perform configuration
/docker-entrypoint.sh: Looking for shell scripts in /docker-entrypoint.d/
/docker-entrypoint.sh: Launching /docker-entrypoint.d/10-listen-on-ipv6-by-default.sh
10-listen-on-ipv6-by-default.sh: info: Getting the checksum of /etc/nginx/conf.d/default.conf
10-listen-on-ipv6-by-default.sh: info: Enabled listen on IPv6 in /etc/nginx/conf.d/default.conf
/docker-entrypoint.sh: Sourcing /docker-entrypoint.d/15-local-resolvers.envsh
/docker-entrypoint.sh: Launching /docker-entrypoint.d/20-envsubst-on-templates.sh
/docker-entrypoint.sh: Launching /docker-entrypoint.d/30-tune-worker-processes.sh
/docker-entrypoint.sh: Configuration complete; ready for start up
2024/11/26 11:37:45 [notice] 1#1: using the "epoll" event method
2024/11/26 11:37:45 [notice] 1#1: nginx/1.27.2
2024/11/26 11:37:45 [notice] 1#1: built by gcc 12.2.0 (Debian 12.2.0-14) 
2024/11/26 11:37:45 [notice] 1#1: OS: Linux 6.1.0-27-amd64
2024/11/26 11:37:45 [notice] 1#1: getrlimit(RLIMIT_NOFILE): 1048576:1048576
2024/11/26 11:37:45 [notice] 1#1: start worker processes
2024/11/26 11:37:45 [notice] 1#1: start worker process 35
2024/11/26 11:37:45 [notice] 1#1: start worker process 36
2024/11/26 11:37:45 [notice] 1#1: start worker process 37
2024/11/26 11:37:45 [notice] 1#1: start worker process 38
2024/11/26 11:37:45 [notice] 1#1: start worker process 39
2024/11/26 11:37:45 [notice] 1#1: start worker process 40
2024/11/26 11:37:45 [notice] 1#1: start worker process 41
2024/11/26 11:37:45 [notice] 1#1: start worker process 42
2024/11/26 11:37:45 [notice] 1#1: start worker process 43
2024/11/26 11:37:45 [notice] 1#1: start worker process 44
2024/11/26 11:37:45 [notice] 1#1: start worker process 45
2024/11/26 11:37:45 [notice] 1#1: start worker process 46
2024/11/26 11:37:45 [notice] 1#1: start worker process 47
2024/11/26 11:37:45 [notice] 1#1: start worker process 48
2024/11/26 11:37:45 [notice] 1#1: start worker process 49
2024/11/26 11:37:45 [notice] 1#1: start worker process 50
2024/11/26 11:37:45 [notice] 1#1: start worker process 51
2024/11/26 11:37:45 [notice] 1#1: start worker process 52
2024/11/26 11:37:45 [notice] 1#1: start worker process 53
2024/11/26 11:37:45 [notice] 1#1: start worker process 54
2024/11/26 11:37:45 [notice] 1#1: start worker process 55
2024/11/26 11:37:45 [notice] 1#1: start worker process 56
2024/11/26 11:37:45 [notice] 1#1: start worker process 57
2024/11/26 11:37:45 [notice] 1#1: start worker process 58
2024/11/26 11:37:45 [notice] 1#1: start worker process 59
2024/11/26 11:37:45 [notice] 1#1: start worker process 60
2024/11/26 11:37:45 [notice] 1#1: start worker process 61
2024/11/26 11:37:45 [notice] 1#1: start worker process 62
2024/11/26 11:37:45 [notice] 1#1: start worker process 63
2024/11/26 11:37:45 [notice] 1#1: start worker process 64
2024/11/26 11:37:45 [notice] 1#1: start worker process 65
2024/11/26 11:37:45 [notice] 1#1: start worker process 66

stderr:
