tests/llm/fixtures/test_ask_holmes/25_misconfigured_ingress_class/test_case.yaml
user_prompt: "Other services from outside the K8s cluster are unable to reach my-http-app-deployment, why?"
tags:
  - chain-of-causation
  - k8s-misconfig
expected_output:
  - The reason should be related to the ingress class
  - It should clearly state that example-ingress-class does not exist - saying it just might not exist is not good enough.
before_test: kubectl apply -f./ingress_with_class.yaml
after_test: kubectl delete -f./ingress_with_class.yaml
#include_files:
#  - ingress_runbook.md
evaluation:
  correctness: 1
generate_mocks: True
